fixed z-index on expanded nav

--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ header h1 {
   visibility: hidden;
   /* remove overflow:hidden if you want to create a drop-down menu - but then remember to fix/eliminate the list items animation */
   overflow: hidden;
-  z-index: 1;
+  z-index: 100;
   /* Force Hardware Acceleration in WebKit */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -456,7 +456,7 @@ header h1 {
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  z-index: 2;
+  z-index: 102;
 }
 .cd-nav-trigger span {
   /* the span element is used to create the menu icon */
